# simple_python_rbac

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
simple-python-rbac/: README.md  pyproject.toml
simple-python-rbac/simple_python_rbac/: __init__.py  core.py
simple-python-rbac/tests/: test_rbac.py
simple_python_rbac/: __init__.py  core.py  exceptions.py  permissions.py
simple_python_rbac.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_rbac.py
