[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-python-rbac"
version = "0.1.0"
authors = [
  { name="Grayfados", email="author@example.com" },
]
description = "A simple, hierarchical Role-Based Access Control (RBAC) package for Python."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/simple-python-rbac"
"Bug Tracker" = "https://github.com/yourusername/simple-python-rbac/issues"
